tests/baselines/reference/uniqueSymbolJs2.errors.txt
/index.js(9,1): error TS2367: This comparison appears to be unintentional because the types 'typeof x' and 'typeof y' have no overlap.


==== /index.js (1 errors) ====
    /** @type {unique symbol} */
    const x = Symbol()
    /** @type {unique symbol} */
    const y = Symbol()
    
    /** @type {typeof x} */
    let z = x
    
    z == y // error
    ~~~~~~
!!! error TS2367: This comparison appears to be unintentional because the types 'typeof x' and 'typeof y' have no overlap.